--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-firebase-hooks": "^3.0.4",
     "react-scripts": "4.0.3",
     "react-timer-hook": "^3.0.4",
+    "use-sound": "^4.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
